--- a/css/style.css
+++ b/css/style.css
@@ -292,3 +292,59 @@ h1 {
   );
   border: 1px solid #050505;
 }
+
+#FOR {
+  background-image: linear-gradient(
+    90deg,
+    #0000ff 0%,
+    #ffffff 50%,
+    #ff0000 100%
+  );
+  border: 1px solid #aaa;
+}
+
+#JUV {
+  background-color: #009d00;
+  background-image: linear-gradient(
+    90deg,
+    #009d00 0%,
+    #ffffff 50%,
+    #009d00 100%
+  );
+  border: 1px solid #070;
+}
+
+#JUV > img {
+  width: 2.75rem;
+}
+
+#LON {
+  background-color: #46b1f3;
+  background-image: linear-gradient(
+    90deg,
+    #46b1f3 0%,
+    #fff 25%,
+    #46b1f3 50%,
+    #fff 75%,
+    #46b1f3 100%
+  );
+  border: 1px solid #000;
+}
+
+#NAU {
+  background-color: #ff0000;
+  background-image: linear-gradient(90deg, #f00 0%, #fff 50%, #f00 100%);
+  border: 1px solid #fff;
+}
+#SBE {
+  background-color: #ff0;
+  background-image: linear-gradient(
+    90deg,
+    #ff0 0%,
+    #000 25%,
+    #ff0 50%,
+    #000 75%,
+    #ff0 100%
+  );
+  border: 1px solid #ff0;
+}
